Links internos e externos

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -12,8 +12,18 @@
         <li>pedro</li>
         <li>denilson</li>
     </ul>
-    <img src="https://static8.minhalojanouol.com.br/imasdesign/produto/multifotos/hd/20180719184310_2031997969_DZ.jpg" width="500px" alt="escudo botafogo">
-    <img src="images/eu.jpeg" width="200px" alt="eu">
+    <img src="https://static8.minhalojanouol.com.br/imasdesign/produto/multifotos/hd/20180719184310_2031997969_DZ.jpg" width="200px" alt="escudo botafogo">
+    <img src="images/eu.jpeg" width="70px" alt="eu"><br><br>
+    <ul>
+        <li><a href="zaqueu">zaqueu</a></li>
+        <li><a href="pedro">pedro></a></li>
+        <li><a href="denilson">denilson</a></li>
+    </ul>
+    
+        <p id = "zaqueu">zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu zaqueu</p>
+        <p id="pedro">pedro pedro pedro pedro pedro pedro </p>
+        <p id="denilson">denilson denilson denilson denilson denilson </p>
+    <a href="https://google.com" target="_blank">google</a>
 </body>
 
 </html>
