colocando texto e imagem

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -18,6 +18,10 @@
             text-decoration: none;
             background-color: #FFB3C6;
         }
+        article {
+            margin-left: 30px;
+            img: 400px
+        }
     </style>
    </head>
   <body>
@@ -31,5 +35,10 @@
            <li><a href="">Contato</a></li>
         </ul>
     </nav>
+    <article>
+        <h2>As lacrais do mar</h2>
+        <p>As Stomatopas, conhecidas cientificamente como <em>Odontodactylus scyllarus</em>, uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="stomatopda">
+    </article>
   </body>
 </html>
