final do texto sobre stomatopodas

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -18,9 +18,12 @@
             text-decoration: none;
             background-color: #FFB3C6;
         }
-        article {
-            margin-left: 30px;
-            img: 400px
+        section {
+            background-color: #FFB3C6;
+            padding: 15px;
+        }
+        footer{
+            background-color: white;
         }
     </style>
    </head>
@@ -35,10 +38,20 @@
            <li><a href="">Contato</a></li>
         </ul>
     </nav>
-    <article>
+    <section>
         <h2>As lacrais do mar</h2>
-        <p>As Stomatopas, conhecidas cientificamente como <em>Odontodactylus scyllarus</em>, uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="stomatopda">
-    </article>
+        <p>As Stomatopas, conhecidas cientificamente como <em>Odontodactylus scyllarus</em>, uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies. São do reino Animalia, filo arthropoda, subfilo Crustacea, classe  Malacostraca, subclasse Hoplocarida e ordem Stomatopoda.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="stomatopoda">
+    </section>
+    <section>
+        <h3>Sobre</h3>
+        <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem.</p>
+    </section>
+    <nav>
+        <h3>Referências bibliográficas:</h3>
+        <a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipédia</a>
+    </nav>
+        <p> Para ver uma Stomatopoda em ação <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">clique aqui.</a></a></p>
+    <footer>Conteúdo compilado por Matheus Benini Ferreira, 2021.</footer>
   </body>
 </html>
