Deixando a página mais acessivel

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Stomatopodas</title>
+    <html lang="pt-br\">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <style>
         body {
             background-color: #FFE5EC;
+            color:black;
         }
         header {
             text-align: center;
@@ -23,7 +26,8 @@
             padding: 15px;
         }
         footer{
-            background-color: white;
+            background-color: #FFB3C6;
+            color:black;
         }
     </style>
    </head>
