--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/forms.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/forms.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="form-header">
-    <h1>Formulário para cadastro de currículo</h1>
-    <p>Preencha os campos abaixo.</p>
+  <header class="form-header text-center">
+    <h1 class="display-1">Formulário para cadastro de currículo</h1>
+    <p class="lead">Preencha os campos abaixo.</p>
   </header>
-  <form action=""></form>
+  <form method="GET" action=""></form>
   <fieldset>
     <div class="line-content">
       <label for="name">Nome: </label>
@@ -72,8 +72,8 @@
       <input type="text" class="input-data" name="date" value="" required>
     </div>
   </fieldset>
-  <button id="submit-button" type="submit">Enviar</button>
-  <button id="clear-button" type="button">Limpar</button>
+  <button class="submit-button" type="submit">Enviar</button>
+  <button class="clear-button" type="button">Limpar</button>
   <script src="script.js"></script>
 </body>
 </html>
