--- a/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/index.html
+++ b/front-end/bloco-15-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/index.html
@@ -33,11 +33,6 @@
       <button id="next">Next color</button>
       <button id="random">Random color</button>
     </div>
-    <script>
-      const ESTADO_INICIAL = {
-        colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
-        index: 0,
-      };
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
